--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,19 +1,25 @@
-FROM n8nio/n8n:latest-debian
+ame: Build and Push Docker image
 
-USER root
+on:
+  push:
+    branches: [ "main" ]
+  workflow_dispatch:
 
-# تحديث الـ sources + تثبيت الأدوات
-RUN sed -i 's/deb.debian.org/archive.debian.org/g' /etc/apt/sources.list && \
-    sed -i '/security.debian.org/d' /etc/apt/sources.list && \
-    apt-get update && \
-    apt-get install -y --no-install-recommends \
-        python3-pip \
-        ffmpeg \
-        curl \
-        wget \
-        git \
-        nano && \
-    pip3 install --no-cache-dir yt-dlp && \
-    apt-get clean && rm -rf /var/lib/apt/lists/*
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-USER node
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push image
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/n8n-custom:latest
